# patches

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  demo_synth.dot  demo_synth.yaml  mutual_fm.yaml
.github/workflows/: build-windows.yml
adr/: 0001-flatten-cable-buffer-pool.md  0002-rtrb-for-plan-handoff.md  0003-planner-state-freshness.md  0004-stable-buffer-pool-and-module-lifecycle.md  0005-dsl-compilation-pipeline.md  0006-dsl-surface-syntax.md  0007-no-module-destroy-hook.md  0008-control-rate-and-midi-osc-architecture.md  0009-audio-thread-owned-module-pool.md  0010-off-thread-module-deallocation.md  0011-descriptor-first-module-v2.md  0012-planner-v2-graph-diffing.md  0013-port-connectivity-notification.md  0014-control-signal-purpose.md  0015-polyphonic-cables.md  0016-midi-only-control-architecture.md
epics/closed/: E001-foundational-audio-engine.md  E002-post-e001-cleanup.md  E003-module-lifecycle-improvements.md  E004-incidental-fixes.md  E005-stable-buffer-pool-and-module-destruction.md  E007-sizeable-modules.md  (+10 more)
examples/: demo_synth.yaml  midi_synth.yaml  mutual_fm.yaml  poly_synth.yaml
patches-core/: Cargo.toml
patches-engine/: Cargo.toml
patches-integration-tests/: Cargo.toml
patches-integration-tests/src/: lib.rs
patches-integration-tests/tests/: connectivity_notification.rs  multi_source_mixing.rs  off_thread_deallocation.rs  planner_v2.rs  poly_cables.rs  poly_synth_profile.rs  replan_integration.rs  stable_buffer_indices.rs  state_preservation.rs
patches-modules/: Cargo.toml
patches-player/: Cargo.toml
tickets/: TEMPLATE.md
(+241 files in other folders)
